# ultatron

./: .gitignore  README.md  SUBMIT_HPARAM_TUNING.md  __init__.py  pyproject.toml  pytest.ini  submit_hparam_tuning.sh  submit_parallel_ablations.sh
agents/: __init__.py
configs/: hparam_tuning.yaml
configs/data/: data_config.yaml
configs/experiments/: full.yaml  image_only_baseline.yaml  no_cross_distill.yaml  run1.yaml
configs/finetune/: busi.yaml  camus.yaml  cardiacudc.yaml  echocp.yaml  echonet.yaml  echonet_lvh.yaml  echonet_pediatric.yaml  lus_patient.yaml  mimic_lvvol.yaml  tn3k.yaml
configs/models/: model_config.yaml
configs/run1/: data_run1.yaml  minimal_run1.yaml
configs/smoke/: multi_dataset_smoke.yaml
configs/train/: train_config.yaml
configs/vlm/: base_vlm.yaml  run1_vlm.yaml
data/: __init__.py
data/adapters/: __init__.py  annotated_heterogeneous_us_db.py  base.py  benin_lus.py  bite.py  brain_3d_us_neuroimages.py  busi.py  camus.py  common_carotid.py  cubs.py  dermatologic_skin_lesions.py  echonet.py  erdes.py  mimic_echo.py  remind2reg.py  remind_brain_ius.py  resect.py  rsa_lus.py  stu_hospital.py  tn3k.py
data/infra/: __init__.py  cscs_paths.py  storage.py
data/labels/: __init__.py  label_interface.py  label_spec.py
data/pipeline/: __init__.py  alp_interface.py  collators.py  collators_extended.py  datamodule.py  dataset.py  downstream_dataset.py  samplers.py  transforms.py
data/schema/: __init__.py  manifest.py  ontology.py
docs/: data_storage.md
eval/: __init__.py  linear_probe.py  metrics.py
eval/benchmarks/: __init__.py  (+5 more)
finetune/: __init__.py  base.py
models/: __init__.py  base.py  model_config.py  registry.py
scripts/: build_manifest.py  download_mimic_iv_echo_pgroup.sh  finetune.py  run_training_job.sh  stage_datasets.py  submit_finetune.sh  submit_job.sh  submit_mimic_resume.sh  submit_smoke.sh  submit_stage.sh  submit_vlm.sh  train.py  train_vlm.py
tests/: conftest.py  test_adapters.py  test_annotated_heterogeneous_us_db_adapter.py  test_backbone_interface.py  test_bite_adapter.py  test_brain_3d_us_neuroimages_adapter.py  test_common_carotid_adapter.py  test_cubs_adapter.py  test_datasets.py  test_dermatologic_skin_lesions_adapter.py  test_erdes_adapter.py  test_label_spec.py  test_liver_adapters.py  test_maternal_fetal_adapters.py  test_remind2reg_adapter.py  test_remind_brain_ius_adapter.py  test_resect_adapter.py  test_stu_hospital_adapter.py
train/: __init__.py  alp.py  gram.py  phase_steps.py  train.py  trainer.py  training_integration.py  validate.py
viz/: __init__.py  attention.py  core.py  dashboard.py  features.py  probes.py  prototypes.py  regression.py  sam_prompts.py  segmentation.py  training.py
vlm/: __init__.py  projector.py  student.py
(+115 files in other folders)
